data/derived/fa15/progs/unify/prog2130.ml.out
Characters 29-39:
  wwhile ((f, (f b)), b);;
          ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
